feat: 미션 #2 응원/경험나누기 3회 자동 연동 구현